message 분리 및  platform 구분

--- a/modules/characterCard.html
+++ b/modules/characterCard.html
@@ -131,7 +131,7 @@
           dominant-baseline="middle" text-anchor="middle"
           font-size="11"
         >
-        Lv.{{unionLevel}}
+        {{unionLevel}}
         </text>
       </g>
       <g transform="translate(90, 100)">
